--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/texView01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/napis"
+        android:text="@string/description1"
         android:textColor="@color/napisAccent"
         android:textSize="@dimen/fontDuzy"
         app:layout_constraintTop_toBottomOf="@+id/imageView01"
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
-        android:onClick="opis1"
+        android:onClick="description1"
         android:text="1"
         app:layout_constraintBottom_toBottomOf="@id/button2"
         app:layout_constraintRight_toLeftOf="@id/button2"
@@ -41,7 +41,7 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="opis2"
+        android:onClick="description2"
         android:text="2"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -52,7 +52,7 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="opis3"
+        android:onClick="description3"
         android:text="3"
         app:layout_constraintBottom_toBottomOf="@id/button2"
         app:layout_constraintLeft_toRightOf="@id/button2" />
